--- a/website/templates/components/geocoder.pug
+++ b/website/templates/components/geocoder.pug
@@ -3,7 +3,7 @@ div.input-group#boundary-search-container
 		div.input-group-text#search-bar-symbol
 			i.fa.fa-search
 			div.d-none.spinner-border.text-secondary(role="status" style="height: 16px; width: 16px")
-	input#boundary-search.form-control(type="text" placeholder="Rechercher un lieu...")
+	input#boundary-search.form-control(type="text" placeholder=__("Rechercher un lieu..."))
 
 script.
 	const searchTextField = document.getElementById("boundary-search");
