--- a/website/templates/components/issues_navbar.pug
+++ b/website/templates/components/issues_navbar.pug
@@ -2,10 +2,10 @@ nav.navbar.navbar-expand-sm.navbar-light.bg-light.d-flex.justify-content-between
 	div
 		button.btn.btn-outline-secondary.toggle-map-sidebar.mr-2
 			i.fa.fa-bars
-		a.navbar-brand.d-inline-block.d-md-none(title="Retour à la page d'accueil" href="/")
-			img(src="/images/favicon.png" alt="Projet du mois OpenStreetMap")
-		a.navbar-brand.d-none.d-md-inline-block(title="Retour à la page d'accueil" href="/")
-			img(src="/images/logo_mini.png" alt="Projet du mois")
+		a.navbar-brand.d-inline-block.d-md-none(title=__("Retour à la page d'accueil") href="/")
+			img(src="/images/favicon.png" alt=__("Projet du mois OpenStreetMap"))
+		a.navbar-brand.d-none.d-md-inline-block(title=__("Retour à la page d'accueil") href="/")
+			img(src="/images/logo_mini.png" alt=__("Projet du mois"))
 
 	div.form-inline
 		+user_button
