--- a/website/templates/layout.pug
+++ b/website/templates/layout.pug
@@ -18,7 +18,7 @@ html(lang="fr")
 						block navbar
 				+user_button
 
-		p.text-muted.text-center.d-md-none(style="font-size: 1rem") Catalyseur d'énergies pour OpenStreetMap
+		p.text-muted.text-center.d-md-none(style="font-size: 1rem")= __("Catalyseur d'énergies pour OpenStreetMap")
 
 		block content
 
