--- a/website/templates/components/issues_sidebar.pug
+++ b/website/templates/components/issues_sidebar.pug
@@ -7,29 +7,29 @@ div.pdm-sidebar#pdm-issues-sidebar.pdm-hidden.pdm-sidebar
 	div.overflow-auto.h-100.w-100.pdm-sidebar-content
 		//- Filters
 		div.pdm-sidebar-filters.m-3
-			a.d-inline-block.d-md-none.w-100.text-center.mb-1(href="/" title="Retour à la page d'accueil")
-				img(style="max-width: 100%; height: 40px" src="/images/logo_mini.png" alt="Projet du mois")
+			a.d-inline-block.d-md-none.w-100.text-center.mb-1(href="/" title=__("Retour à la page d'accueil"))
+				img(style="max-width: 100%; height: 40px" src="/images/logo_mini.png" alt=__("Projet du mois"))
 
 			div.btn-group.w-100.mb-2.mt-2(role="group")
 				a.btn.btn-outline-secondary.w-50(href=`/projects/${id}/map` role="button")
 					i.fa.fa-map.mr-1
-					| Carte
+					| #{__("Carte")}
 				button.btn.btn-secondary.w-50(type="button" disabled="")
 					i.fa.fa-list.mr-1
-					| Liste
+					| #{__("Liste")}
 
 			form#filters.mt-3
-				p.mb-1 Afficher uniquement les signalements
+				p.mb-1= __("Afficher uniquement les signalements")
 				div.form-group.form-check.m-0
 					input#filterReadyMerge.form-check-input(type="checkbox" name="ready")
 					label.form-check-label(for="filterReadyMerge")
-						span.badge.badge-pill.badge-success Prêt à intégrer
+						span.badge.badge-pill.badge-success= __("Prêt à intégrer")
 				div.form-group.form-check.m-0
 					input#filterPicture.form-check-input(type="checkbox" name="picture")
-					label.form-check-label(for="filterPicture") Avec photo
+					label.form-check-label(for="filterPicture")= __("Avec photo")
 				div.form-group.form-check.m-0
 					input#filterAnonymous.form-check-input(type="checkbox" name="anonymous")
-					label.form-check-label(for="filterAnonymous") Anonymes
+					label.form-check-label(for="filterAnonymous")= __("Anonymes")
 
 script.
 	const issuesSidebarDom = document.getElementById("pdm-issues-sidebar");
