--- a/website/templates/components/pictures.pug
+++ b/website/templates/components/pictures.pug
@@ -2,7 +2,7 @@ script.
 	// Regexes from https://github.com/ENT8R/NotesReview/blob/main/js/linkify.js
 	const IMAGE_HOSTING_REGEX = [
 		[ /http(?:s)?:\/\/upload\.wikimedia\.org\/wikipedia\/(.+?)\/(?:thumb\/)?(\w\/\w\w)\/(.+?\.(?:jpg|jpeg|png))(?:\/.+?\.(?:jpg|jpeg|png))?/gi, 'https://upload.wikimedia.org/wikipedia/$1/thumb/$2/$3/300px-$3' ],
-		[ /http(?:s)?:\/\/commons\.wikimedia\.org\/wiki\/File:(.+?\.(?:jpg|jpeg|png|svg))/gi, 'https://commons.wikimedia.org/wiki/Special:FilePath/$1?width=300' ],
+		[ /http(?:s)?:\/\/commons\.wikimedia\.org\/wiki\/File(:|%3A)(.+?\.(?:jpg|jpeg|png|svg))/gi, 'https://commons.wikimedia.org/wiki/Special:FilePath/$2?width=300' ],
 		[ /http(?:s)?:\/\/(?:www\.)?mapillary\.com\/map\/im\/(\w+)/gi, 'https://images.mapillary.com/$1/thumb-320.jpg' ]
 	];
 
@@ -36,7 +36,7 @@ script.
 	// Generate carousel DOM using list of pictures
 	function createPicturesCarousel(container, pictures, options = {}) {
 		if(pictures.length > 0) {
-			const cssClasses = (options.classes || "").split(" ");
+			const cssClasses = (options.classes || "").split(" ").filter(s => s.length > 0);
 			if(pictures.length === 1) {
 				const imgDom = document.createElement("img");
 				imgDom.classList.add("card-img", "card-img-center", ...cssClasses);
