--- a/website/templates/components/map_sidebar_legend.pug
+++ b/website/templates/components/map_sidebar_legend.pug
@@ -6,10 +6,10 @@ a.d-inline-block.d-md-none.w-100.text-center.mb-1(href="/" title=__("Retour à l
 div.btn-group.w-100.mb-2.mt-2(role="group")
 	button.btn.btn-secondary.w-50(type="button" disabled="")
 		i.fa.fa-map.mr-1
-		| Carte
+		| #{__("Carte")}
 	a.btn.btn-outline-secondary.w-50(href=`/projects/${id}/issues` role="button")
 		i.fa.fa-list.mr-1
-		| Liste
+		| #{__("Liste")}
 
 //- Legend entries
 div.map-legend.mb-2.pb-2(style="border-bottom: 1px solid #bbb")
