--- a/website/templates/layout.pug
+++ b/website/templates/layout.pug
@@ -11,7 +11,7 @@ html(lang="fr")
 		nav.navbar.navbar-light.sticky-top.navbar-pdm
 			div.container.d-flex.p-0.px-sm-3.align-items-center.justify-content-between
 				div.d-flex.align-items-center
-					a.mr-2(href="/" title="Accueil")
+					a.mr-2(href="/" title=__("Accueil"))
 						img.d-none.d-md-inline-block(style="height: 40px" src="/images/favicon.png")
 						img.d-md-none(style="height: 40px" src="/images/logo_mini.png")
 					div.navbar-pdm-links.d-none.d-md-block
