--- a/website/templates/components/map_sidebar_legend.pug
+++ b/website/templates/components/map_sidebar_legend.pug
@@ -15,7 +15,11 @@ div.btn-group.w-100.mb-2.mt-2(role="group")
 div.map-legend.mb-2.pb-2(style="border-bottom: 1px solid #bbb")
 	each lg in legend
 		label.switch(id=`pdm-legend-${lg.layerId}` title="Afficher/masquer la couche")
-			div.pdm-color-patch(style=`border-color: ${lg.color}`)
+			if lg.media=="vector"
+				div.pdm-color-patch(style=`border-color: ${lg.color}`)
+			else
+				div.pdm-raster-patch
+				
 			div.switch-text= lg.label
 			div.switch-box
 				input(type="checkbox")
@@ -24,18 +28,20 @@ div.map-legend.mb-2.pb-2(style="border-bottom: 1px solid #bbb")
 //- Make legend symbol clickable to enable/disable layer
 -
 	const legendClickEvents = legend
-		.map(lg => lg.layerId)
-		.map((id,i) => `
-			const domLegend${i} = document.getElementById('pdm-legend-${id}').querySelector("input");
-			domLegend${i}.checked = true;
-			domLegend${i}.addEventListener("change", e => {
-				if(domLegend${i}.checked) {
-					map.setFilter('${id}', null);
-				}
-				else {
-					map.setFilter('${id}', ['boolean', false]);
-				}
-			});`)
+		.map((lg,i) => {
+			let makeVisible = lg.media == "raster" ? `map.setLayoutProperty("${lg.layerId}", "visibility", "visible");` : `map.setFilter('${lg.layerId}', null);`;
+			let makeInvisible = lg.media == "raster" ? `map.setLayoutProperty("${lg.layerId}", "visibility", "none");` : `map.setFilter('${lg.layerId}', ['boolean', false]);`;
+			return `
+				const domLegend${i} = document.getElementById('pdm-legend-${lg.layerId}').querySelector("input");
+				domLegend${i}.checked = ${lg.media == "raster" ? "false" : "true"};
+				domLegend${i}.addEventListener("change", e => {
+					if(domLegend${i}.checked) {
+						${makeVisible}
+					}else {
+						${makeInvisible}
+					}
+				});`
+		})
 		.join("\n");
 
 script !{legendClickEvents}
