Fix too wide images in readme (fixes #160)

--- a/website/templates/pages/project.pug
+++ b/website/templates/pages/project.pug
@@ -131,7 +131,7 @@ block prepend footer
 	a#about
 	div.container.text-left
 		div.row
-			div.blog-post.col-md-8
+			div.blog-post.col-md-8.blog-post-readme
 				include:markdown-it ../../../README.md
 			aside.col-md-4.blog-sidebar
 				div.p-4.mb-3.rounded
