--- a/website/templates/style.css
+++ b/website/templates/style.css
@@ -126,6 +126,9 @@ a.dropdown-item:not([href]):hover {
 	margin-bottom: 1.25rem;
 	color: #999;
 }
+.blog-post-readme img {
+	max-width: 100%;
+}
 
 /*
  * Footer
