Improve message for position marker, use fixme tag for imprecise location (fixes #158)

--- a/website/templates/components/map.pug
+++ b/website/templates/components/map.pug
@@ -7,7 +7,7 @@ div#map-alert-loading.alert.alert-info.map-alert.font-weight-bold.d-none
 	| Chargement en cours
 
 div#edit-feature-location.alert.alert-primary.map-alert.d-none
-	| Déplacer la carte pour positionner l'objet à créer
+	| Placer à la position exacte
 	div.btn-group.btn-block.mt-1
 		button.btn.btn-success.w-50(role="button")
 			i.fa.fa-check.mr-2
