--- a/website/templates/style.css
+++ b/website/templates/style.css
@@ -333,7 +333,23 @@ a.navbar-brand:hover {
 .map-legend .pdm-color-patch {
 	margin-right: 5px;
 }
-.map-legend .pdm-raster-patch {
+
+.map-background {
+	position:absolute;
+	bottom:0;
+	width:272px;
+	background-color:#fff;
+}
+
+.map-background > div {
+	display: flex;
+	align-items: center;
+	line-height: 1.5rem;
+	cursor: pointer;
+	align-items: center;
+}
+
+.map-background .pdm-raster-patch {
 	min-height: 30px;
 	min-width: 30px;
 	background: url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%228%22%20height%3D%228%22%20viewBox%3D%220%200%208%208%22%3E%0A%20%20%3Cpath%20d%3D%22M0%200v4h4v-4h-4zm5%202v3h-3v1h4v-4h-1zm2%202v3h-3v1h4v-4h-1z%22%20/%3E%0A%3C/svg%3E')
